--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .Rhistory
 .RData
 .Ruserdata
+~$Introduction to R.pptx
+not yet published/intRo2.Rmd
+not yet published/intRo2.nb.html
+not yet published/intRo1.nb.html
+not yet published/intRo 1.nb.html
