--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ not yet published/intRo2.Rmd
 not yet published/intRo2.nb.html
 not yet published/intRo1.nb.html
 not yet published/intRo 1.nb.html
+*.html
