--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 create_data.Rmd
 data/raw/Fake_Health_Dataset.csv
 data/raw/espaur2023*
-data/processed/
 data/processing/point_prevalence.rds
+data/processed/point_prevalence*
 planning/
 certificates/
+/.quarto/
